src/sass/components/app.scss
.app {
  .upper-nav {
    display: grid;
    grid-template-columns: 4rem 1fr;
    align-items: center;
    border-block-end: 0.5px solid $gray;

    .logo {
      block-size: 100%;
      background-color: $green;
      display: flex;
      place-content: center;
      border-inline-end: 0.5px solid $gray;
    }

    ul {
      display: flex;
      justify-content: center;
      align-items: center;
      gap: 3rem;

      li {
        select {
          width: 7rem;
          padding: 0.5rem 0.6rem;
          border-radius: $border-radius;
          border: 0.1px solid $gray;
          background-color: transparent;
          color: $light-black;
        }
        svg {
          transform: translateX(1px);
        }
      }
    }
  }
  section {
    display: grid;
    grid-template-columns: 4rem 1fr;

    block-size: min(89vh, 100vh);

    nav {
      padding-block-start: 2rem;
      border-inline-end: 0.5px solid $gray;
      ul {
        block-size: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 1rem;

        li:last-child {
          justify-self: flex-end;
        }
      }
    }

    .editors {
      display: grid;
      grid-template-columns: 1.5fr 1fr;

      div {
        border-bottom: none;
        overflow: scroll;

        &:first-of-type {
          margin-inline-end: 0.2rem;
        }
      }
    }
  }
}

button {
  display: flex;
  place-items: center;
  padding: 0.4rem;

  background-color: transparent;
  // border: 1px solid transparent;
  border: 0.5px solid $gray;
  border-radius: $icon-border-radius;

  &:hover {
    background-color: $gray;
  }
}

.app {
  nav {
    background-color: #fff;
  }
  
  .cm-theme{
    overflow: auto !important;
  }
}

.editor {
  block-size: 100%;
}

@media screen and (max-width: $layout-breakpoint-sm) {
  .app::after {
    content: "Not responsive yet, switch to a bigger screen size.";
    background-color: $blue;
    inset: 0;
    position: fixed;
    z-index: 9999;
    color: $white;
    font-size: $font-size-md;
    display: grid;
    place-content: center;
    text-align: center;
    padding: 1rem;
    font-weight: 700;
  }
}

